--- a/css/styling_management.css
+++ b/css/styling_management.css
@@ -26,7 +26,7 @@ nav {
   height: 150vh;
   left: 0;
   width: 90px;
-  background: #542e71;
+  background: radial-gradient(#dc3d21, #8b1fa5);
   /* Purple */
   overflow: hidden;
   transition: 1s;
@@ -112,7 +112,8 @@ a:hover i {
 .inventory {
   margin-top: 20px;
   text-transform: capitalize;
-  background: #f5f5f548;
+  background: radial-gradient(#dc3d21, #8b1fa5);
+
   /* Light ash background */
 }
 
@@ -144,11 +145,11 @@ table {
 thead tr {
   color: #f5f5f5;
   /* Purple text */
-  background: #542e71;
+  background: linear-gradient(#dc3d21, #8b1fa5);
   /* Light ash background for table header */
   text-align: left;
   font-weight: bold;
-  #542e71
+
 }
 
 th,
